--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
     <div class="container">
         <div class="main-image"></div>
-        <div class="buttons">
-            <a href="all-works.html" class="button">Посмотреть все работы</a>
-            <a href="artist-statement.html" class="button">Артист стейтмент</a>
-        </div>
+        <!-- Кликабельная картинка на главном изображении -->
+        <a href="gallery.html" class="overlay-link">
+            <img src="see-all-jobs.png" alt="Click to view gallery" class="bottom-image">
+            <img src="see all jobs_blue.png" alt="Click to view gallery" class="bottom-image-hover">
+        </a>
+        <!-- Изображение statement -->
+        <a href="artist-statment.html" class="statement-link">
+            <img src="Statment.png" alt="Statement" class="statement-image">
+        </a>
     </div>
 </body>
 </html>
