--- a/artist-statement.html
+++ b/artist-statement.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Артист стейтмент</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Артист Стейтмент</title>
+    <link rel="stylesheet" href="artist-statement.css">
 </head>
 <body>
     <div class="container">
-        <h1>Артист стейтмент</h1>
-        <p>Здесь будет твое артистическое заявление.</p>
+        <header>
+            <h1>Артист Стейтмент</h1>
+        </header>
+        <main>
+            <section class="statement-content">
+                <p>Здесь будет ваш артист стейтмент. Вы можете написать о своем художественном пути, вдохновении, техниках и темах, которые вас интересуют.</p>
+                <p>Поделитесь своими мыслями и чувствами, расскажите о том, что вас мотивирует создавать искусство, и что вы надеетесь донести до зрителей через свои работы.</p>
+            </section>
+        </main>
+        <footer>
+            <a href="index.html" class="button">Назад на главную</a>
+        </footer>
     </div>
 </body>
 </html>
